[gd_scene load_steps=6 format=3 uid="uid://c7lefalft3kk8"]

[ext_resource type="Script" path="res://addons/region-editor/scenes/regions_container_global_commands.gd" id="1_evds5"]
[ext_resource type="Texture2D" uid="uid://ci3g21olaqo8p" path="res://addons/region-editor/icons/GuiVisibilityVisible.svg" id="1_w77ei"]
[ext_resource type="Texture2D" uid="uid://coh8isxl7ays5" path="res://addons/region-editor/icons/GuiVisibilityHidden.svg" id="2_bxbgx"]
[ext_resource type="Texture2D" uid="uid://2ttaukdgul27" path="res://addons/region-editor/icons/ThemeSelectAll.svg" id="3_uuuyf"]
[ext_resource type="Texture2D" uid="uid://drjsik3nb3ve7" path="res://addons/region-editor/icons/Edit.svg" id="4_1rxgg"]

[node name="RegionsContainerGlobalCommands" type="HBoxContainer"]
offset_right = 292.0
offset_bottom = 23.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
script = ExtResource("1_evds5")

[node name="RegionsLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Regions: 0"

[node name="scont" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true

[node name="hbox" type="HBoxContainer" parent="scont"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "Applied to all regions, including next created regions."

[node name="Label2" type="Label" parent="scont/hbox"]
layout_mode = 2
text = "Actions: "

[node name="ToggleRegionNames" type="TextureButton" parent="scont/hbox"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
tooltip_text = "Toggle Regions Names Visibility"
toggle_mode = true
texture_normal = ExtResource("1_w77ei")
texture_pressed = ExtResource("2_bxbgx")
ignore_texture_size = true
stretch_mode = 5

[node name="SelectAllRegions" type="TextureButton" parent="scont/hbox"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
tooltip_text = "Select All Regions"
toggle_mode = true
texture_normal = ExtResource("3_uuuyf")
ignore_texture_size = true
stretch_mode = 5

[node name="SelectedRegionsLabel" type="Label" parent="scont/hbox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "0 / 0"

[node name="EditMultipleRegions" type="TextureButton" parent="scont/hbox"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
tooltip_text = "Edit Selected Regions"
texture_normal = ExtResource("4_1rxgg")
ignore_texture_size = true
stretch_mode = 5

[connection signal="toggled" from="scont/hbox/ToggleRegionNames" to="." method="_on_toggle_region_names_toggled"]
[connection signal="toggled" from="scont/hbox/SelectAllRegions" to="." method="_on_select_all_regions_pressed"]
[connection signal="pressed" from="scont/hbox/EditMultipleRegions" to="." method="_on_edit_multiple_regions_pressed"]
